little change in view (about, people, events)

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,1 +1,15 @@
-<h1 class="title">kerker</h1>
+<h1 class="page-title">About <small>EECS kerker</small></h1>
+<h2>Site Info</h2>
+<div class="well">
+  <p>
+  This site is under heavy development. If there are any problems, feel free to contact the developers or open issues in GitHub. <br>
+  GitHub Repo: <a href="https://github.com/joshua5201/EECS-kerker">https://github.com/joshua5201/EECS-kerker</a>
+  </p>
+</div>
+<h2>Developers and Maintainers</h2>
+<div class="well">
+  <p>
+  0310015 蕭從恩<br>
+  0310026 李育有
+  </p>
+</div>
